@@ -11,6 +11,7 @@
             Bangle.js2: Only handle UBX protocol from GPS on Bangle.js 1 as it interferes with CASIC on Bangle.js 2 (fix #2124)
             Bangle.js: GPS-raw no longer sets the FIFO_FULL message if data is lost - just passes a bool as the second argument
             Fix for buffer overflow + segv found via fuzzing (#2121, #2122)
+            new Date(str) no longer interprets ISO 8601 UTC timestamps as local time (fix #2116)
 
      2v11 : Bangle.js: Enable the Bangle.on('tap') event from the accelerometer by default
             Bangle.js: revert to (better) Kionix default thresholds for tap detect
